@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.1.1.1 2012/01/08 15:52:52 wiz Exp $
-
-SHA1 (UltimaIV.zip) = 682111bb04b091f25aa5ea641f46893f4c70c728
-RMD160 (UltimaIV.zip) = 4513dacc7e387507c1a43388b3b55c8404788fbf
-Size (UltimaIV.zip) = 28219732 bytes
